[project]
name = "ssb-eimerdb"
version = "0.2.2"
description = "EimerDB"
authors = [{ name = "Stian Elisenberg", email = "seg@ssb.no" }]
maintainers = [{ name = "Statistics Norway, Data enablement Department (724)" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["classifiers"]
dependencies = [
    "click>=8.0.1",
    "duckdb>=1.0.0",
    "google-cloud-storage>=2.15.0",
    "pyarrow>=17.0.0",
    "dapla-toolbelt>=3.0.1",
    "uuid>=1.30",
    "ipykernel>=6.29.3",
    "pandas>=2.3.0",
    "parameterized[typed]>=0.9.0",
    "docstring-inheritance>=2.2.0",
    "numpy>=2.0.1",
    "filelock>=3.15.4",
    "dapla-auth-client>=1.2.0",
]

[project.urls]
homepage = "https://github.com/statisticsnorway/ssb-eimerdb"
repository = "https://github.com/statisticsnorway/ssb-eimerdb"
documentation = "https://statisticsnorway.github.io/ssb-eimerdb"
Changelog = "https://github.com/statisticsnorway/ssb-eimerdb/releases"

[project.scripts]
ssb-eimerdb = "eimerdb.__main__:main"

[tool.poetry]
classifiers = ["Development Status :: 4 - Beta"]
requires-poetry = ">=2.0"
packages = [{ include = "eimerdb", from = "src" }]

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = { extras = ["jupyter"], version = ">=23.1.0" }
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = ">=0.0.284"
pytest = ">=6.2.5"
sphinx = ">=6.2.1"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
deptry = ">=0.23.0"
pandas-stubs = ">=2.3.2.250926"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["eimerdb", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
# Allow missing type hints in third-party libraries without type information.
module = [
    "duckdb.*",
    "gcsfs.*",
    "google.cloud.*",
    "pyarrow.*",
    "parameterized.*",
]
ignore_missing_imports = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py310"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
